syntax = "proto3";
package types;

option go_package = "gitlab.com/mayachain/mayanode/x/mayachain/types";

import "gogoproto/gogo.proto";

message Network {
  string bond_reward_rune = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  string total_bond_units = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint", (gogoproto.nullable) = false];
  int64 LPIncomeSplit = 3;
  int64 NodeIncomeSplit = 4;
  uint64 outbound_gas_spent_cacao = 5;
  uint64 outbound_gas_withheld_cacao = 6;
}
